# syuron

./: .gitignore  pyproject.toml
scripts/: clip_similarity_matrix.py  visualize_map.py
utils/: constants.py  data.py
utils/models/: clip.py
